<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/seller_review_button"
        android:layout_width="288dp"
        android:layout_height="97dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/leave_a_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seller_search_editText" />

    <EditText
        android:id="@+id/seller_search_editText"
        android:layout_width="299dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seller_map_button" />

    <Button
        android:id="@+id/seller_map_button"
        android:layout_width="188dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sellerCheckReviews"
        android:layout_width="235dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:text="@string/check_reviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellerText" />

    <TextView
        android:id="@+id/sellerText"
        android:layout_width="273dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/seller"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seller_review_button" />

    <Button
        android:id="@+id/updateInformation"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/update_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellerCheckReviews" />
</androidx.constraintlayout.widget.ConstraintLayout>